ingresscontrol.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-ingress-stable
  namespace: sample
spec:
  rules:
  - host: sample.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-svc-stable
          servicePort: 80
