ingresscontrolstage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress-stage
  namespace: sample
spec:
  rules:
  - host: samplestage.example.com 
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          serviceName: sample-svc-stage
          servicePort: 80
